--- a/src/main/resources/templates/cas/casLoginView.html
+++ b/src/main/resources/templates/cas/casLoginView.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox">记住密码
+                                <input name="rememberMe" id="rememberMe" type="checkbox">记住密码
                             </label>
                         </div>
                         <input type="hidden" name="execution" th:value="${flowExecutionKey}"/>
